--- a/css/style.css
+++ b/css/style.css
@@ -317,10 +317,15 @@ nav {
 -----------------------------------------------------------------------------*/
 .footer_banner {
 	padding-top:20px;
-	height:149px;
+	height:auto;
 	width:100%;
-	background:url(../images/footer_bg.png) repeat-x;
+	background:#c5ced1 url(../images/footer_bg.png) repeat-x;
 	text-align: center;
+}
+
+.footer_banner_container {
+	width:1000px;
+	margin:0px auto;
 }
 
 .banner {
@@ -329,6 +334,7 @@ nav {
 	height:131px;
 	margin-left:12.5px;
 	margin-right:12.5px;
+	margin-bottom:20px;
 	
 }
 
